sphinx4 normal works